SubQutrit Function Fixed

--- a/Qutrit_ML.ipynb
+++ b/Qutrit_ML.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,6 +250,10 @@
     "    # Annhilation and Creation Operators (for PRA Hamiltonian)\n",
     "    annhilate = np.array([[0,1,0],[0,0,np.sqrt(2)],[0,0,0]])\n",
     "    create = annhilate.T\n",
+    "\n",
+    "    # Drives for Qutrit transitiosn\n",
+    "    sxx = np.array([[0,0,0],[0,0,1],[0,1,0]]) #~X for 1->2 transition\n",
+    "    syy = np.array([[0,0,0],[0,0,-1j],[0,1j,0]]) #~Y for 1->2 transition\n",
     "    \n",
     "    #Function definitions \n",
     "    def zero_mat(N):#Generates matrix of zeros\n",
@@ -321,7 +325,7 @@
     "        SU.append(unitary)\n",
     "\n",
     "    #These are the coefficients we are optimizing\n",
-    "    R = torch.rand([M,2*N], dtype=torch.double) *2*np.pi # Random initialization (between 0 and 2pi)\n",
+    "    R = torch.rand([M,4*N], dtype=torch.double) *2*np.pi # Random initialization (between 0 and 2pi)\n",
     "    R.requires_grad = True # set flag so we can backpropagate\n",
     "\n",
     "    #Optimizer settings(can be changed & opttimized)\n",
@@ -354,7 +358,7 @@
     "            U_Exp = torch.tensor(np.kron(U_Exp,id),dtype=dt)#initializing unitary\n",
     "        for m in range(0,M):#Product of pulses\n",
     "            pulse_coef = R[m]\n",
-    "            H1 = sum_pauli(pulse_coef[:N],sx) + sum_pauli(pulse_coef[N:],sy)\n",
+    "            H1 = sum_pauli(pulse_coef[:N],sx) + sum_pauli(pulse_coef[N:2*N],sy) + sum_pauli(pulse_coef[2*N:3*N],sxx) + sum_pauli(pulse_coef[3*N:4*N],syy) \n",
     "            U_Exp = torch.matmul(torch.matrix_exp(-1j*(H0+H1)*t/M),U_Exp)\n",
     "\n",
     "        #Fidelity calulcation given by Nielsen Paper\n",
@@ -372,7 +376,7 @@
     "        infidelity.backward()\n",
     "\n",
     "        #Printing statement\n",
-    "        if (n+1)%50==0: \n",
+    "        if (n+1)%100==0: \n",
     "            print('Itertation ', str(n+1), ' out of ', str(N_iter), 'complete. Avg Infidelity: ', str(infidelity.item()))\n",
     "\n",
     "        #optimizer \n",
@@ -2467,6 +2471,58 @@
    "source": [
     "for U in SU:\n",
     "    print(U)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Itertation  50  out of  1000 complete. Avg Infidelity:  0.7242179614432325\n",
+      "Itertation  100  out of  1000 complete. Avg Infidelity:  0.6855854427450665\n",
+      "Itertation  150  out of  1000 complete. Avg Infidelity:  0.6220481148064297\n",
+      "Itertation  200  out of  1000 complete. Avg Infidelity:  0.536153046388456\n",
+      "Itertation  250  out of  1000 complete. Avg Infidelity:  0.44116426957346344\n",
+      "Itertation  300  out of  1000 complete. Avg Infidelity:  0.3676310137017912\n",
+      "Itertation  350  out of  1000 complete. Avg Infidelity:  0.3137131648403042\n",
+      "Itertation  400  out of  1000 complete. Avg Infidelity:  0.27801603703071687\n",
+      "Itertation  450  out of  1000 complete. Avg Infidelity:  0.2559506706792025\n",
+      "Itertation  500  out of  1000 complete. Avg Infidelity:  0.23628317749633632\n",
+      "Itertation  550  out of  1000 complete. Avg Infidelity:  0.21272837491346597\n",
+      "Itertation  600  out of  1000 complete. Avg Infidelity:  0.19368645768857706\n",
+      "Itertation  650  out of  1000 complete. Avg Infidelity:  0.17854334551220852\n",
+      "Itertation  700  out of  1000 complete. Avg Infidelity:  0.16595140801979869\n",
+      "Itertation  750  out of  1000 complete. Avg Infidelity:  0.15432211033634613\n",
+      "Itertation  800  out of  1000 complete. Avg Infidelity:  0.14241815179505224\n",
+      "Itertation  850  out of  1000 complete. Avg Infidelity:  0.1304577033628327\n",
+      "Itertation  900  out of  1000 complete. Avg Infidelity:  0.1187776731955511\n",
+      "Itertation  950  out of  1000 complete. Avg Infidelity:  0.10733218174216752\n",
+      "Itertation  1000  out of  1000 complete. Avg Infidelity:  0.09619012636911406\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.09619012475013733"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "CNOT_qutrit = torch.tensor([[1,0,0,0,0,0,0,0,0],[0,1,0,0,0,0,0,0,0],[0,0,1,0,0,0,0,0,0],[0,0,0,0,1,0,0,0,0],[0,0,0,1,0,0,0,0,0],[0,0,0,0,0,1,0,0,0],\n",
+    "[0,0,0,0,0,0,1,0,0],[0,0,0,0,0,0,0,1,0],[0,0,0,0,0,0,0,0,1]],dtype=torch.cdouble)\n",
+    "Identity = torch.tensor([[1,0,0,0,0,0,0,0,0],[0,1,0,0,0,0,0,0,0],[0,0,1,0,0,0,0,0,0],[0,0,0,1,0,0,0,0,0],[0,0,0,0,1,0,0,0,0],[0,0,0,0,0,1,0,0,0],\n",
+    "[0,0,0,0,0,0,1,0,0],[0,0,0,0,0,0,0,1,0],[0,0,0,0,0,0,0,0,1]],dtype=torch.cdouble)\n",
+    "J = torch.tensor([[1,1],[1,1]])\n",
+    "#pulse_frequencies = fidelity_Qutrit(J,[1,1],24,CNOT_qutrit,np.pi/4,100000)\n",
+    "fidelity_subQutrit(J,[1,1],32,CNOT_qutrit,np.pi/8,5000)"
    ]
   },
   {
